--- a/galeri.html
+++ b/galeri.html
@@ -114,7 +114,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="logo.png" alt="logo GSP" style="width:100px; height:auto; border-radius:8px;"> GIMBUL SUPPLIER GROUP (GSP)</a>
+            <a class="navbar-brand" href="index.html"><img src="logo.png" alt="logo GSP" style="width:50px; height:auto; border-radius:8px;"> GIMBUL SUPPLIER GROUP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
